docs/_static/style.css
/* ... */
:root[data-font="sans"] {
  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

:root[data-theme="dark"] {
  --main-background: var(--grey-7);
  --link-text: var(--cyan-1);
  --link-hover-text: var(--cyan-1);
  --main-text: var(--white);
  --mobile-nav-background: var(--grey-5);
  --mobile-nav-text: var(--white);
  --mobile-nav-hover-text: var(--white);
  --mobile-nav-header-text: var(--white);
  --nav-background: var(--grey-7);
  --nav-text: var(--grey-1);
  --nav-hover-text: var(--grey-2);
  --nav-header-text: var(--white);
  --footer-text: var(--grey-2);
  --footer-link: var(--grey-1);
  --hr-border: var(--grey-1);
  --main-big-headers-text: var(--grey-1);
  --main-big-headers-border: var(--grey-1);
  --main-h5-header-text: var(--grey-4);
  --main-h6-header-text: var(--grey-5);
  --main-h4-header-border: var(--grey-2);
  --header-link: var(--grey-2);
  --header-link-hover-text: var(--grey-6);
  --note-background: var(--grey-6);
  --note-border: var(--black);
  --warning-background: var(--light-yellow);
  --warning-border: var(--yellow);
  --error-background:  var(--light-red);
  --error-border: var(--red);
  --helpful-background: var(--light-blue);
  --helpful-border: var(--blue);
  --codeblock-background: var(--grey-6);
  --codeblock-border: var(--black);
  --codeblock-text: var(--grey-1);
  --inline-code-background: var(--black);
  --xref-code-background: transparent;
  --api-entry-background: var(--grey-6);
  --table-header-background: var(--grey-6);
  --table-text: var(--grey-1);
  --table-border: var(--grey-4);
  --mobile-active-toc: var(--grey-6);
  --active-toc: var(--grey-6);
  --scrollbar: rgba(0,0,0,0.5);
  --scrollbar-hover: rgba(0,0,0,0.7);
  --rtd-ad-border: var(--grey-6);
  --rtd-ad-background: var(--grey-5);
  --rtd-ad-main-text: var(--grey-2);
  --rtd-ad-small-text: var(--grey-1);
}

img[src$="snake_dark.svg"]  {
  display: none;
}
:root[data-theme="dark"] img[src$="snake.svg"] {
  display: none;
}
:root[data-theme="dark"] img[src$="snake_dark.svg"] {
  display: inherit;
}

body {
  font-family: var(--font-family);
  font-size: 16px;
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: var(--main-background);
  color: var(--main-text);
}


/* Scrollbar related */

#sidebar::-webkit-scrollbar {
  width: 0.5em;
}

#sidebar::-webkit-scrollbar-thumb {
  background-color: var(--scrollbar);
  border-radius: 0.25em;
}

#sidebar::-webkit-scrollbar-thumb:hover {
  background-color: var(--scrollbar-hover);
}


/* grid related */

.main-grid {
  display: grid;
  min-height: 100%;
  grid-auto-rows: min-content auto min-content;
  grid-template-areas:
    "s"
    "n"
    "c"
    "h"
    "f";
}

.grid-item {
  max-width: 100vw;
  padding: 0.8em;
}

/* all URLs only show underline on hover */
a {
  text-decoration: none;
  color: var(--link-text);
}

a:hover {
  text-decoration: underline;
  color: var(--link-hover-text);
}

/* headers */

header {
  grid-area: h;
  background-color: var(--main-background);
  color: var(--main-text);
}

header > nav {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

header > nav > a {
  color: var(--white);
}

header > nav > a:hover {
  color: var(--white);
  text-decoration: underline;
}

.main-heading {
  display: none;
}

.sub-header {
  grid-area: n;
  background-color: var(--grey-6);
  color: var(--white);
}

/* these aren't shown on mobile */

.sub-header > label {
  display: none;
  margin-right: 1em;
}

.sub-header > select {
  display: none;
}

.sub-header > .settings {
  color: var(--settings);
  display: none;
  margin-left: 1em;
  margin-right: 0.5em;
}

.sub-header > .settings:hover {
  color: var(--settings-hover);
}

/* footer stuff */
footer {
  grid-area: f;
  font-size: 14px;
  text-align: right;
  color: var(--footer-text);
}

footer a {
  text-decoration: underline;
  color: var(--footer-link);
}

/* sidebar stuff */

aside {
  grid-area: s;
  font-size: 14px;
  line-height: 1.75em;
  top: 0;
  position: -webkit-sticky; /* safari */
  position: sticky;
  background-color: var(--mobile-nav-background);
  color: var(--mobile-nav-text);
  z-index: 2;
}

aside h3 {
  color: var(--mobile-nav-header-text);
  font-size: 24px;
  font-weight: normal;
}

#settings-toggle {
  float: right;
}

.fa-bars, .fa-times, .fa-cog {
  font-size: 2em;
  cursor: pointer;
}

.sidebar-toggle {
  display: initial !important;
}

#sidebar {
  display: none;
}

#sidebar a {
  color: var(--mobile-nav-text);
}

#sidebar a:hover {
  color: var(--mobile-nav-hover-text);
}

#sidebar h3 {
  font-size: 24px;
  margin: 0;
  margin-top: 1em;
}

#sidebar ul {
  list-style: none;
  margin: 1em 2em 2em 1em;
  padding: 0;
}

#sidebar ul ul {
  list-style: square;
  margin: 0em;
  margin-left: 1.5em;
}

#sidebar form {
  margin: 1em 0;
  display: flex;
  align-items: baseline;
}

/* search button stuff */

.searchwrapper {
  display: flex;
  align-items: stretch;
}

.searchwrapper > input[type=search] {
  font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
  font-size: 1em;
}

.searchwrapper > input[type=search],
.searchwrapper > button[type=submit] {
  background-color: var(--search-background);
  border: none;
  color: var(--search-text);
  padding: 0.5em;
  min-height: 2.5em;
  flex: 9;
}

.searchwrapper {
  border-bottom: 1px solid var(--search-border);
}

.searchwrapper:focus-within {
  border-bottom: 1px solid var(--search-focus);
}

/* .searchwrapper > input[type=search] {
  border: 1px solid var(--search-border);
  border-right: none;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.searchwrapper > input[type=search]:focus,
button[type=submit]:focus ~ input[type=search] {
  border: 1px solid var(--search-focus);
  border-right: none;
} */
/* ... */

